--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,8 @@ data/TS45511_q15.hdf5
 data/TS45511_q1.hdf5
 data/TS45511_q05_br.hdf5
 data/TS45511_q05.hdf5
+data/TS45511_q15_br.hdf5
+data/TS45511_q15.hdf5
+data/TS45511_q1.hdf5
+data/TS45511_q05_br.hdf5
+data/TS45511_q05.hdf5
