--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@ data/TS45511_q15.hdf5
 data/TS45511_q1.hdf5
 data/TS45511_q05_br.hdf5
 data/TS45511_q05.hdf5
+data/TS45511_q05_n0.hdf5
+data/TS45511_q15_n0.hdf5
