--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,5 @@
 data/q15_growthrate_2Dspectra_aligned.hdf5
 data/TS45511_q05_aligned_GC7.hdf5
 data/TS45511_q15_aligned_GC7.hdf5
-
+data/TS45511_q15_ripple_ns05.hdf5
+data/TS45511_q15_ripple_ns1.hdf5
