--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 
 data/q15_growthrate_2Dspectra_aligned.hdf5
 data/TS45511_q05_aligned_GC7.hdf5
+data/TS45511_q1_aligned_GC7.hdf5
 data/TS45511_q15_aligned_GC7.hdf5
 data/TS45511_q15_ripple_ns05.hdf5
 data/TS45511_q15_ripple_ns1.hdf5
