--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ data/TS45511_q1_aligned_GC7.hdf5
 data/TS45511_q15_aligned_GC7.hdf5
 data/TS45511_q15_ripple_ns05.hdf5
 data/TS45511_q15_ripple_ns1.hdf5
+data/TS45511_q05_ripple_ns033.hdf5
